@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "STDIN 1"
-.TH STDIN 1 2023-11-27 "perl v5.38.1" "User Contributed Perl Documentation"
+.TH STDIN 1 2023-12-12 "perl v5.38.2" "User Contributed Perl Documentation"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -72,8 +72,9 @@
 \& my $cve = Test::CVE\->new (
 \&    verbose  => 0,
 \&    deps     => 1,
+\&    perl     => 1,
 \&    minimum  => 0,
-\&    cpansa   => "https://perl\-toolchain\-gang.github.io/cpansa\-feed/cpansa.json",
+\&    cpansa   => "https://cpan\-security.github.io/cpansa\-feed/cpansa.json",
 \&    make_pl  => "Makefile.PL",
 \&    cpanfile => "cpanfile",
 \&    want     => [],
@@ -138,6 +139,11 @@ deps
 .PP
 Select if CVE's are also checked for direct dependencies. Default is true. If
 false, just check the module or release itself.
+.PP
+perl
+.IX Subsection "perl"
+.PP
+Select if CVE's on perl itself are included in the report. Default is true.
 .PP
 minimum
 .IX Subsection "minimum"
