@@ -1,5 +1,7 @@
 STDIN(1)              User Contributed Perl Documentation             STDIN(1)
 
+
+
 NAME
         Test::CVE - Test against known CVE's
 
@@ -9,8 +11,9 @@ SYNOPSIS
         my $cve = Test::CVE->new (
            verbose  => 0,
            deps     => 1,
+           perl     => 1,
            minimum  => 0,
-           cpansa   => "https://perl-toolchain-gang.github.io/cpansa-feed/cpansa.json",
+           cpansa   => "https://cpan-security.github.io/cpansa-feed/cpansa.json",
            make_pl  => "Makefile.PL",
            cpanfile => "cpanfile",
            want     => [],
@@ -72,6 +75,11 @@ DESCRIPTION
 
        Select if CVE's are also checked for direct dependencies. Default is
        true. If false, just check the module or release itself.
+
+       perl
+
+       Select if CVE's on perl itself are included in the report. Default is
+       true.
 
        minimum
 
@@ -187,7 +195,9 @@ SEE ALSO
 COPYRIGHT AND LICENSE
         Copyright (C) 2023-2023 H.Merijn Brand.  All rights reserved.
 
-       This  library  is free software;  you can redistribute and/or modify it
+       This library is free software;  you can redistribute and/or modify it
        under the same terms as Perl itself.
 
-perl v5.38.1                      2023-11-27                          STDIN(1)
+
+
+perl v5.38.2                      2023-12-12                          STDIN(1)
